# Clinet

./: CMakeLists.txt  makefile
include/: BidiMessegeEncoderDecoder.h  Packet.h  keyboardInput.h  serverInput.h
src/: BidiMessegeEncoderDecoder.cpp  Packet.cpp  bidiClient.cpp  connectionHandler.cpp  echoClient.cpp  encoderDecoderTester.cpp  keyboardInput.cpp  serverInput.cpp
